# iassert

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac
examples/: Makefile.am  Makefile.in  multiple_test.c  simple_test.c
include/: Makefile.am  Makefile.in  libiassert.h
libiassert/: Makefile.am  Makefile.in  libiassert.c  signal_handler.c
